[package]
name = "framed-msgpack"
description = "A MessagePack-based codec with a prefix message length for use with tokio-rs"
version = "0.0.1"
authors = ["Christopher Field <cfield2@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["MessagePack", "msgpack", "framed", "codec", "framing"]
categories = ["encoding", "decoding", "value-formatting"]

[dependencies]
bytes = "0.4"
futures = "0.1"
rmpv = "0.4"
tokio-io = "0.1"

[dev-dependencies]
tokio-proto = "0.1"
tokio-service = "0.1"

